master: choose the important System.out